# AdvancedAnsibleSnippetsGenerator

./: .gitignore  Makefile  Pipfile  ansible.cfg  main.py  pyproject.toml
templates/: code-merged.json.j2  code.json.j2  snippet.yml.j2  sublime.xml.j2
